# internal/router/api_router.go
@@ -1,12 +1,9 @@
 package router
 
 import (
-	"github.com/BooeZhang/gin-layout/config"
 	"github.com/BooeZhang/gin-layout/internal/handler/v1/user"
 	"github.com/BooeZhang/gin-layout/internal/middleware"
 	"github.com/BooeZhang/gin-layout/pkg/auth"
-	"github.com/BooeZhang/gin-layout/store/mysql"
-	"github.com/gin-contrib/authz"
 	"github.com/gin-gonic/gin"
 )
 
@@ -20,14 +17,11 @@ func NewApiRouter(userHandler *user.Handler) *ApiRouter {
 }
 
 func (ar *ApiRouter) Load(g *gin.Engine) {
-	// login
-	db := mysql.GetDB()
-	cf := config.GetConfig()
-	jwtMiddleware := middleware.NewJWT(db, cf.JwtConfig)
-	g.POST("/login", jwtMiddleware.LoginHandler)
+	// 登录
+	g.POST("/v1/user/login", ar.userHandler.Login)
 
 	// user group
-	ug := g.Group("/v1/user", authz.NewAuthorizer(auth.GetEnforcer()))
+	ug := g.Group("/v1/user", middleware.JWTAuth(), middleware.NewAuthorizer(auth.GetEnforcer()))
 	{
 		ug.GET("", ar.userHandler.GetUserInfo)
 		//ug.POST('/add_auth', ar.userHandler.)
